[gd_scene load_steps=6 format=3 uid="uid://c2eqggf8shjkj"]

[ext_resource type="Script" uid="uid://cak0rakexjrop" path="res://Scripts/Consumables/uraniun_root.gd" id="1_prv8m"]
[ext_resource type="Texture2D" uid="uid://comd0img18hyc" path="res://icon.svg" id="2_eli82"]

[sub_resource type="AtlasTexture" id="AtlasTexture_x7j55"]
atlas = ExtResource("2_eli82")
region = Rect2(0, 0, 128, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_slglb"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_x7j55")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dyylf"]
size = Vector2(130, 130)

[node name="Syringe" type="Area2D"]
script = ExtResource("1_prv8m")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_slglb")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_dyylf")

[node name="EffectDuration" type="Timer" parent="."]
wait_time = 2.0

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="EffectDuration" to="." method="_on_effect_duration_timeout"]
